--- a/app/webroot/css/ok.scss
+++ b/app/webroot/css/ok.scss
@@ -729,6 +729,7 @@ $none:none;
 			bloc_contenu
 ------------------------------------------ */
 #content{
+	width:70%;
 	margin: 30px 0 0 260px;
 	color: #6D6D6D;
 	font-size: 12px;
@@ -881,7 +882,7 @@ $none:none;
 /* -- Bloc central -- */
 .blocsCentral{display: inline-block;margin-right: 5px;margin-top: 25px;}
 
-#blocsAjoutCote{display: inline-block;vertical-align: top;padding: 5px;}
+#blocsAjoutCote{display: inline-block;vertical-align: top;padding: 5px;width:29%;}
 #blocsAjoutCote .add_meta{margin-bottom: 15px;width: 280px;background-color: whiteSmoke;border:1px solid #DFDFDF;-moz-box-shadow: inset 0 1px 0 #fff;-webkit-box-shadow: inset 0 1px 0 #fff;box-shadow: inset 0 1px 0 #fff;-webkit-border-radius: 3px;border-radius: 3px;}
 #blocsAjoutCote .add_meta h3{font-size: 15px;font-weight: normal;padding: 7px 10px;margin: 0;line-height: 1;color: #464646;border-bottom:1px solid #DFDFDF;background-color: #F1F1F1}
 #blocsAjoutCote .add_meta .inside{line-height: 1.4em;padding: 5px}
